Fix resume PDF link
AMENDED 4/3: removed address

--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 					<div class="left-sidebar">
 						<section class="scard" id="paper-copy">
 							<h3>Paper Copy</h3>
-							<p>See <a href="#">this PDF</a> for a paper copy of my resumé.</p>
+							<p>See <a href="files/resume.pdf">this PDF</a> for a paper copy of my resumé.</p>
 						</section>
 						<!-- XXX there should be a <section> here -->
 						<nav id="contents" class="page-toc scard">
